# backend/blockchainService/routes/prescriptionRoutes.js
@@ -8,7 +8,8 @@ const {
     setSafeLimit,
     getSafeLimit,
     getRegulatoryAuthority,
-    resolveFlaggedPrescription
+    resolveFlaggedPrescription,
+    viewTransaction
 } = require("../controllers/prescriptionController");
 
 // defining router
@@ -23,5 +24,6 @@ router.post("/setSafeLimit", setSafeLimit); // Requires the regulatory authority
 router.get("/getSafeLimit/:drug", getSafeLimit); // Fetch the safe limit for a specific drug
 router.get("/getRegulatoryAuthority", getRegulatoryAuthority); // Get the regulatory authority's address
 router.post("/resolveFlaggedPrescription", resolveFlaggedPrescription); // Requires the regulatory authority's address
+router.get("/viewTransaction/:txHash", viewTransaction);
 
 module.exports = router;
