# backend/gatewayService/routes/RegulatoryBodyRoutes.js
@@ -1,5 +1,6 @@
 const express = require('express');
-const { viewAllPrescriptions, resolveFlaggedPrescription } = require('../controllers/RegulatoryBodyController');
+const { viewAllPrescriptions, resolveFlaggedPrescription, loginAdmin, setSafeLimit, getSafeLimit, addDiagnosis, findDoctorByPublicKey } = require('../controllers/RegulatoryBodyController');
+const { authenticateAdmin } = require('../Utils/adminAuth');
 
 // define a router
 const router = express.Router();
@@ -7,9 +8,13 @@ const router = express.Router();
 // API routes
 // ################ 
 // view all prescriptions route
-router.get('/viewAllPrescriptions', viewAllPrescriptions);
-router.post('/resolveFlaggedPrescription', resolveFlaggedPrescription);
-
+router.post('/login', loginAdmin);
+router.post('/setSafeLimit', authenticateAdmin, setSafeLimit);
+router.get('/getSafeLimit/:drug', authenticateAdmin, getSafeLimit);
+router.get('/viewAllPrescriptions', authenticateAdmin, viewAllPrescriptions);
+router.post('/resolveFlaggedPrescription', authenticateAdmin, resolveFlaggedPrescription);
+router.post('/addDiagnosis', authenticateAdmin, addDiagnosis);
+router.get('/findDoctorByEthPublicKey/:ethPubKey', authenticateAdmin, findDoctorByPublicKey);
 
 // export the RegulatoryBody route
 module.exports = router;
